--- a/src/app/pages/components/navbar-list/navbar-list.component.html
+++ b/src/app/pages/components/navbar-list/navbar-list.component.html
@@ -29,7 +29,7 @@
           </a>
         </li>
         <li class="menu-item">
-          <a routerLink="/main">
+          <a routerLink="/manager">
             <i class="pi pi-cog"></i> {{'navigationForm.manager' | transloco}}
           </a>
         </li>
