--- a/src/app/pages/components/product/card-detail/card-detail.component.html
+++ b/src/app/pages/components/product/card-detail/card-detail.component.html
@@ -1,23 +1,89 @@
-<div class="product-detail">
+<div class="container flex flex-row">
   <h2>Ürün Detayı</h2>
-  <div class="flex flex-column xl:flex-row xl:align-items-start p-4 gap-4">
-    <img class="w-9 sm:w-16rem xl:w-10rem shadow-2 block xl:block mx-auto border-round" [src]="'https://primefaces.org/cdn/primeng/images/demo/product/' + product.image" [alt]="product.name" />
-    <div class="flex flex-column sm:flex-row justify-content-between align-items-center xl:align-items-start flex-1 gap-4">
-      <div class="flex flex-column align-items-center sm:align-items-start gap-3">
-        <div class="text-2xl font-bold text-900">{{ product.name }}</div>
-        <p-rating [ngModel]="product.rating" [readonly]="true" [cancel]="false"></p-rating>
-        <div class="flex align-items-center gap-3">
+  <div class="product-detail">
+    <div class="flex flex-column xl:flex-row xl:align-items-start p-4 gap-4">
+      <p-image
+        class="shadow-2 block xl:block mx-auto border-round"
+        [src]="
+          'https://primefaces.org/cdn/primeng/images/demo/product/' +
+          product.image
+        "
+        [alt]="product.name"
+        width="375"
+        height="550"
+        [preview]="true"
+      />
+      <div
+        class="flex flex-column sm:flex-row justify-content-between align-items-center xl:align-items-start flex-1 gap-4"
+      >
+        <div
+          class="flex flex-column align-items-center sm:align-items-start gap-3"
+        >
+          <div
+            class="text-2xl flex justify-content-between w-full font-bold text-900"
+          >
+            <div>
+              {{ product.name }}
+            </div>
+            <div>
+              <button
+                pButton
+                icon="pi pi-heart"
+                style="background-color: #000"
+                class="m-1 p-button-rounded button"
+                [disabled]="product.inventoryStatus === 'OUTOFSTOCK'"
+              ></button>
+            </div>
+          </div>
+
           <span class="flex align-items-center gap-2">
             <i class="pi pi-tag"></i>
             <span class="font-semibold">{{ product.category }}</span>
           </span>
-          <p-tag [value]="product.inventoryStatus" [severity]="getSeverity(product)"></p-tag>
+          <p-tag
+            [value]="product.inventoryStatus"
+            [severity]="getSeverity(product)"
+          ></p-tag>
+          <p-rating
+            [ngModel]="product.rating"
+            [readonly]="true"
+            [cancel]="false"
+          ></p-rating>
+          <span class="text-2xl font-semibold">{{ "$" + product.price }}</span>
+          <div class="flex flex-column justify-content-end align-content-end">
+            <div class="flex flex-column" style="float: right;">
+             <div class="w-full">
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minima
+              officiis inventore rerum omnis cumque quod veniam dignissimos
+              optio laudantium debitis, modi voluptatem tenetur facere
+              consectetur eius earum consequuntur dolore distinctio. Lorem ipsum
+              dolor sit, amet consectetur adipisicing elit. Minima officiis
+              inventore rerum omnis cumque quod veniam dignissimos optio
+              laudantium debitis, modi voluptatem tenetur facere consectetur
+              eius earum consequuntur dolore distinctio. Lorem ipsum dolor sit,
+              amet consectetur adipisicing elit. Minima officiis inventore rerum
+              omnis cumque quod veniam dignissimos optio laudantium debitis,
+              modi voluptatem tenetur facere consectetur eius earum consequuntur
+              dolore distinctio. Lorem ipsum dolor sit, amet consectetur
+              adipisicing elit. Minima officiis inventore rerum omnis cumque
+              quod veniam dignissimos optio laudantium debitis, modi voluptatem
+              tenetur facere consectetur eius earum consequuntur dolore
+              distinctio.
+             </div>
+              <div class=" flex m-3 w-full" >
+                <button
+                  pButton
+                  class="m-3 border-round button w-full justify-content-center text-xl"
+                  style="background-color: #000"
+                  [disabled]="product.inventoryStatus === 'OUTOFSTOCK'"
+                  (click)="addToCart(product)"
+                >Sepete ekle</button>
+              </div>
+            </div>
+          </div>
         </div>
-      </div>
-      <div class="flex sm:flex-column align-items-center sm:align-items-end gap-3 sm:gap-2">
-        <span class="text-2xl font-semibold">{{ '$' + product.price }}</span>
-        <button pButton icon="pi pi-shopping-cart" class="md:align-self-end mb-2 p-button-rounded" [disabled]="product.inventoryStatus === 'OUTOFSTOCK'"></button>
       </div>
     </div>
   </div>
 </div>
+
