--- a/src/app/pages/components/orders/orders.component.html
+++ b/src/app/pages/components/orders/orders.component.html
@@ -25,22 +25,27 @@
     </div>
   </div>
   <div  *ngFor="let item of items" class="container">
-    <div class="flex flex-column border-round">
+    <div class="flex flex-column justify-content-between align-content-center align-items-center border-round">
       <p-image
-        class="shadow-2 m-3 border-round"
+        class=" m-3 border-round"
         [src]="
           'https://primefaces.org/cdn/primeng/images/demo/product/' + item.image
         "
         [alt]="item.name"
         [preview]="true"
+        width="100px"
+        height="100px"
       />
       <div class="m-2">
         <h4>{{ item.name }}</h4>
       </div>
+      <div>
+        <p-inputNumber [(ngModel)]="defaultValue" [style]="{'width': 'w-2rem'}" [showButtons]="true" buttonLayout="horizontal" spinnerMode="horizontal" inputId="horizontal" decrementButtonClass="p-button-secondary w-2rem "
+        incrementButtonClass="p-button-secondary w-2rem " incrementButtonIcon="pi pi-plus" decrementButtonIcon="pi pi-minus"></p-inputNumber>
+      </div>
       <div class="m-2">
-        <p>Price: {{ item.price }}</p>
+        <p>Price: ${{ item.price }}</p>
       </div>
     </div>
-    <!-- <button (click)="removeFromCart(item)">Remove</button> -->
   </div>
 </div>
