--- a/src/app/pages/components/orders/orders.component.scss
+++ b/src/app/pages/components/orders/orders.component.scss
@@ -1,10 +1,10 @@
 .container{
-  width:350px;
+  width:330px;
   background: transparent;
   border: 2px solid ;
   border-color: #000;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
 
 
 }
