--- a/src/app/pages/components/orders/orders.component.html
+++ b/src/app/pages/components/orders/orders.component.html
@@ -1,51 +1,92 @@
-<div class="flex flex-wrap gap-3 w-full h-full">
-  <div
-    class="block align-items-center w-full h-full justify-content-center bg-white font-bold m-2 px-5 py-3 border-round"
-    *ngIf="!items || items.length === 0"
-  >
-    <div class="header-title block w-full m-3">
-      <h3>{{ "ordersForm.title" | transloco }}</h3>
-    </div>
+<div class="container">
+  <div class="flex flex-wrap gap-3 w-full h-full">
     <div
-      class="block m-3 justify-content-center align-content-center align-items-center"
+      class="block align-items-center w-full h-full justify-content-center bg-white font-bold m-2 px-5 py-3 border-round"
+      *ngIf="!items || items.length === 0"
     >
-      <div class="card justify-content-center text-xl">
-        <h4>{{ "ordersForm.desc" | transloco }}</h4>
+      <div class="header-title block w-full m-3">
+        <h3>{{ "ordersForm.title" | transloco }}</h3>
       </div>
-      <div class="card justify-content-center align-content-center text-lg">
-        <h6>{{ "ordersForm.desc2" | transloco }}</h6>
+      <div
+        class="block m-3 justify-content-center align-content-center align-items-center"
+      >
+        <div class="card justify-content-center text-xl">
+          <h4>{{ "ordersForm.desc" | transloco }}</h4>
+        </div>
+        <div class="card justify-content-center align-content-center text-lg">
+          <h6>{{ "ordersForm.desc2" | transloco }}</h6>
+        </div>
+        <div class="card justify-content-center align-content-center">
+          <span class="button-style">
+            <button class="button w-full" routerLink="/product">
+              {{ "ordersForm.buttonLabel" | transloco }}
+            </button>
+          </span>
+        </div>
       </div>
-      <div class="card justify-content-center align-content-center">
-        <span class="button-style">
-          <button class="button w-full" routerLink="/product">
-            {{ "ordersForm.buttonLabel" | transloco }}
-          </button>
-        </span>
+    </div>
+    <div class="flex w-full flex-wrap" *ngIf="!items || items.length >= 1">
+      <p-table [value]="items">
+        <ng-template pTemplate="header">
+          <tr>
+            <th>Id</th>
+            <th>Resim</th>
+            <th>Ürün Adı</th>
+            <th>Adet</th>
+            <th>Kategori</th>
+            <th>Durum</th>
+            <th>Fiyat</th>
+            <th>İşlemler</th>
+          </tr>
+        </ng-template>
+        <ng-template pTemplate="body" let-item>
+          <tr>
+            <td>{{item.id}}</td>
+            <td>
+              <p-image
+                [src]="'https://primefaces.org/cdn/primeng/images/demo/product/' + item.image"
+                [alt]="item.name"
+                [preview]="true"
+                width="100px"
+                height="100px"
+              ></p-image>
+            </td>
+            <td>{{ item.name }}</td>
+            <td>{{ item.quantity }}</td>
+            <td>{{item.category}}</td>
+            <td>{{ item.status }}</td>
+            <td>$ {{ item.price }}</td>
+            <td>
+              <button class="button w-full border-round" (click)="removeFromCart(item)">Sil</button>
+            </td>
+          </tr>
+        </ng-template>
+      </p-table>
+      <div class="flex flex-column mx-8 conatiner-price"   *ngIf="!items || items.length >= 1" >
+        <div>
+          <div>
+            <h3>Sipariş Özeti</h3>
+          </div>
+          <div>
+            Ürünün Toplamı:  $ {{totalPrice}}
+          </div>
+          <div>
+            Kargonun Toplamı:  $ 29.90
+          </div>
+          <div>
+            Kargo Bedava (Satıcı Karşılar):  -$ 29.90
+          </div>
+          <hr>
+          <div>
+             $ {{totalPrice}}
+          </div>
+        </div>
+
+        <div class="button-style w-full">
+          <button class="button w-full">Siparişi Tamamla</button>
+        </div>
       </div>
     </div>
   </div>
-  <div  *ngFor="let item of items" class="container">
-    <div class="flex flex-column justify-content-between align-content-center align-items-center border-round">
-      <p-image
-        class=" m-3 border-round"
-        [src]="
-          'https://primefaces.org/cdn/primeng/images/demo/product/' + item.image
-        "
-        [alt]="item.name"
-        [preview]="true"
-        width="100px"
-        height="100px"
-      />
-      <div class="m-2">
-        <h4>{{ item.name }}</h4>
-      </div>
-      <div>
-        <p-inputNumber [(ngModel)]="defaultValue" [style]="{'width': 'w-2rem'}" [showButtons]="true" buttonLayout="horizontal" spinnerMode="horizontal" inputId="horizontal" decrementButtonClass="p-button-secondary w-2rem "
-        incrementButtonClass="p-button-secondary w-2rem " incrementButtonIcon="pi pi-plus" decrementButtonIcon="pi pi-minus"></p-inputNumber>
-      </div>
-      <div class="m-2">
-        <p>Price: ${{ item.price }}</p>
-      </div>
-    </div>
-  </div>
+
 </div>
