--- a/src/app/pages/pages.component.html
+++ b/src/app/pages/pages.component.html
@@ -1,6 +1,6 @@
 <app-navbar-list class=" xl:top-0 xl:left-0 w-full" style="z-index: 1;"></app-navbar-list>
-<div class="my-4 py-4">
+<div class="my-4">
   <router-outlet></router-outlet>
 </div>
-<app-footer class="fixed md:bottom-0 md:right-0 w-full "></app-footer>
+<app-footer class="fixed md:bottom-0 md:right-0 w-full"></app-footer>
 
