--- a/src/app/pages/components/footer/footer.component.scss
+++ b/src/app/pages/components/footer/footer.component.scss
@@ -2,8 +2,13 @@
   background-color: transparent;
   color: #000;
   padding: 10px ;
-  margin: -20px;
+  margin: -25px;
   justify-content: center;
   align-items: center;
   align-content: center;
+}
+.conatiner{
+  width: 100%;
+  margin: 30px;
+  padding: 30px;
 }
