--- a/src/app/pages/components/favorites/favorites.component.html
+++ b/src/app/pages/components/favorites/favorites.component.html
@@ -32,4 +32,43 @@
       </div>
     </div>
   </div>
+  <div class="flex w-full " *ngIf="!items || items.length >= 1">
+    <div class="table">
+     <p-table [value]="items">
+       <ng-template pTemplate="header">
+         <tr>
+           <th>Id</th>
+           <th>Resim</th>
+           <th>Ürün Adı</th>
+           <th>Adet</th>
+           <th>Kategori</th>
+           <th>Durum</th>
+           <th>Fiyat</th>
+           <th>İşlemler</th>
+         </tr>
+       </ng-template>
+       <ng-template pTemplate="body" let-item>
+         <tr>
+           <td>{{item.id}}</td>
+           <td>
+             <p-image
+               [src]="'https://primefaces.org/cdn/primeng/images/demo/product/' + item.image"
+               [alt]="item.name"
+               [preview]="true"
+               width="100px"
+               height="100px"
+             ></p-image>
+           </td>
+           <td>{{ item.name }}</td>
+           <td>{{ item.quantity }}</td>
+           <td>{{item.category}}</td>
+           <td>{{ item.status }}</td>
+           <td>$ {{ item.price }}</td>
+           <td class="button-style">
+             <button class="button w-full border-round" (click)="removeFromCart(item)">Sil</button>
+           </td>
+         </tr>
+       </ng-template>
+     </p-table>
+    </div>
 </div>
