--- a/src/app/pages/components/orders/orders.component.html
+++ b/src/app/pages/components/orders/orders.component.html
@@ -25,7 +25,8 @@
         </div>
       </div>
     </div>
-    <div class="flex w-full flex-wrap" *ngIf="!items || items.length >= 1">
+    <div class="flex w-full " *ngIf="!items || items.length >= 1">
+     <div class="table">
       <p-table [value]="items">
         <ng-template pTemplate="header">
           <tr>
@@ -56,12 +57,13 @@
             <td>{{item.category}}</td>
             <td>{{ item.status }}</td>
             <td>$ {{ item.price }}</td>
-            <td>
+            <td class="button-style">
               <button class="button w-full border-round" (click)="removeFromCart(item)">Sil</button>
             </td>
           </tr>
         </ng-template>
       </p-table>
+     </div>
       <div class="flex flex-column mx-8 conatiner-price"   *ngIf="!items || items.length >= 1" >
         <div>
           <div>
