--- a/src/app/pages/components/product/card-detail/card-detail.component.html
+++ b/src/app/pages/components/product/card-detail/card-detail.component.html
@@ -27,13 +27,11 @@
             <div>
               {{ product.name }}
             </div>
-            <div>
+            <div class="button-style">
               <button
                 pButton
                 icon="pi pi-heart"
-                style="background-color: #000"
-                class="m-1 p-button-rounded button"
-                [disabled]="product.inventoryStatus === 'OUTOFSTOCK'"
+                class=" button m-1 p-button"
               ></button>
             </div>
           </div>
@@ -72,27 +70,26 @@
                 optio laudantium debitis, modi voluptatem tenetur facere
                 consectetur eius earum consequuntur dolore distinctio.
               </div>
-              <div class="flex flex-row m-3 w-full">
-                <div class="m-3">
+              <div class="flex flex-row m-3 w-full justify-content-center align-content-center align-items-center">
+                <div class="button-style">
                   <p-inputNumber
                     [(ngModel)]="defaultValue"
-                    [style]="{ width: 'w-2rem' }"
+                    [style]="{ width: 'w-2rem'}"
                     [showButtons]="true"
                     buttonLayout="horizontal"
                     spinnerMode="horizontal"
                     inputId="horizontal"
-                    decrementButtonClass="p-button-secondary w-2rem "
-                    incrementButtonClass="p-button-secondary w-2rem "
+                    decrementButtonClass="p-button button  w-2rem flex "
+                    incrementButtonClass="p-button button  w-2rem  flex"
                     incrementButtonIcon="pi pi-plus"
                     decrementButtonIcon="pi pi-minus"
                     (ngModelChange)="updateProductPrice()"
                   ></p-inputNumber>
                 </div>
-                <div>
+                <div class="button-style">
                   <button
                     pButton
-                    class="m-3 border-round button w-full justify-content-center text-xl"
-                    style="background-color: #000"
+                    class="m-3 button border-round button w-full justify-content-center text-xl"
                     [disabled]="product.inventoryStatus === 'OUTOFSTOCK'"
                     (click)="addToCart(product)"
                   >
