--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,6 +3,7 @@
 @import "primeng/resources/primeng.css";
 @import "primeflex/primeflex.css";
 @import "primeicons/primeicons.css";
+
 /* You can add global styles to this file, and also import other style files */
 *{
   font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
@@ -35,23 +36,58 @@ p-password-info{
   width: 100%;
 }
 
-.button-style{
-  margin-top: 25px;
-  display: block;
-}
-.button-style .button{
-  color:white;
-  background: #000;
-  width: 100px;
-  height: 50px;
-  font-size: 16px;
-  border: solid 1px gainsboro;
-  border-radius: 10px;
-  cursor: pointer;
-}
-.button-style .button:hover{
-  color:#fff;
-  background: #176B87;
+// .button-style{
+//   margin-top: 25px;
+//   display: block;
+// }
+// .button-style .button{
+//   color:white;
+//   background: #000;
+//   width: 100px;
+//   height: 50px;
+//   font-size: 16px;
+//   border: solid 1px gainsboro;
+//   border-radius: 10px;
+//   cursor: pointer;
+// }
+// .button-style .button:hover{
+//   color:#fff;
+//   background: #176B87;
+
+// }
+
+
+// Define basic colors
+$light-blue: #4dabf5;
+$white: #ffffff;
+$light-gray: #f5f5f5;
+$medium-gray: #b2b2b2;
+$dark-gray: #555555;
+$black: #000000;
+
+// Define button style
+.button-style {
+  button {
+    background-color: $light-blue;
+    color: $white;
+    border: none;
+    padding: 10px 20px;
+    cursor: pointer;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 18px;
+    margin: 4px 2px;
+    transition-duration: 0.4s;
+    border-radius: 5px;
+    width: 100%;
+    height: auto;
+  }
+
+  button:hover {
+    background-color: $dark-gray;
+    color: $white;
+  }
 }
 
 .p-float-label i{
