--- a/src/app/pages/components/product/card-detail/card-detail.component.html
+++ b/src/app/pages/components/product/card-detail/card-detail.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <div class="block w-full">
+  <div class="block w-full mx-4">
     <h2>Ürün Detayı</h2>
   </div>
   <div class="product-detail flex flex-row">
@@ -13,7 +13,6 @@
         [alt]="product.name"
         width="375"
         height="550"
-        [preview]="true"
       />
       <div
         class="flex flex-column sm:flex-row justify-content-between align-items-center xl:align-items-start flex-1 gap-4"
@@ -31,7 +30,8 @@
               <button
                 pButton
                 icon="pi pi-heart"
-                class=" button m-1 p-button"
+                class="button m-1 p-button"
+                (click)="addToCartFavorites(product)"
               ></button>
             </div>
           </div>
@@ -44,11 +44,14 @@
             [value]="product.inventoryStatus"
             [severity]="getSeverity(product)"
           ></p-tag>
-          <p-rating
-            [ngModel]="product.rating"
-            [readonly]="true"
-            [cancel]="false"
-          ></p-rating>
+          <span class="button-style">
+            <p-rating
+              [ngModel]="product.rating"
+              [readonly]="true"
+              [cancel]="false"
+              class="button"
+            ></p-rating>
+          </span>
           <span class="text-2xl font-semibold">{{ "$" + product.price }}</span>
           <div class="flex flex-column justify-content-end align-content-end">
             <div class="flex flex-column" style="float: right">
@@ -70,11 +73,13 @@
                 optio laudantium debitis, modi voluptatem tenetur facere
                 consectetur eius earum consequuntur dolore distinctio.
               </div>
-              <div class="flex flex-row m-3 w-full justify-content-center align-content-center align-items-center">
+              <div
+                class="flex flex-row m-3 w-full justify-content-center align-content-center align-items-center"
+              >
                 <div class="button-style">
                   <p-inputNumber
                     [(ngModel)]="defaultValue"
-                    [style]="{ width: 'w-2rem'}"
+                    [style]="{ width: 'w-2rem' }"
                     [showButtons]="true"
                     buttonLayout="horizontal"
                     spinnerMode="horizontal"
