--- a/src/app/pages/components/favorites/favorites.component.html
+++ b/src/app/pages/components/favorites/favorites.component.html
@@ -1,7 +1,7 @@
 <div class="flex">
   <div
     class="block align-items-center w-full h-full justify-content-center bg-white font-bold m-2 px-5 py-3 border-round"
-    *ngIf="!items || items.length === 0"
+    *ngIf="!items"
   >
     <div class="header-title block w-full m-3">
       <h3>{{ "favoritesMainForm.header" | transloco }}</h3>
@@ -33,9 +33,9 @@
       </div>
     </div>
   </div>
-  <div class="flex w-full" *ngIf="!items || items.length >= 1">
+  <div class="flex w-full" *ngIf="!items">
     <div class="table">
-      <p-table [value]="items">
+      <p-table>
         <ng-template pTemplate="header">
           <tr>
             <th>Id</th>
