--- a/src/app/pages/components/orders/orders.component.html
+++ b/src/app/pages/components/orders/orders.component.html
@@ -2,7 +2,7 @@
   <div class="flex flex-wrap gap-3 w-full h-full">
     <div
       class="block align-items-center w-full h-full justify-content-center bg-white font-bold m-2 px-5 py-3 border-round"
-      *ngIf="!items || items.length === 0"
+      *ngIf=" !items$ || items$.length === 0"
     >
       <div class="header-title block w-full m-3">
         <h3>{{ "ordersForm.title" | transloco }}</h3>
@@ -34,9 +34,9 @@
         </div>
       </div>
     </div>
-    <div class="flex w-full " *ngIf="!items || items.length >= 1">
+    <div class="flex w-full "  *ngIf=" items$ || items$.length >= 1">
      <div class="table">
-      <p-table [value]="items">
+      <p-table>
         <ng-template pTemplate="header">
           <tr>
             <th>Id</th>
@@ -49,7 +49,7 @@
             <th>İşlemler</th>
           </tr>
         </ng-template>
-        <ng-template pTemplate="body" let-item>
+        <ng-template pTemplate="body" let-item *ngFor="let item of items$ ">
           <tr>
             <td>{{item.id}}</td>
             <td>
@@ -73,7 +73,7 @@
         </ng-template>
       </p-table>
      </div>
-      <div class="flex flex-column mx-8 conatiner-price"   *ngIf="!items || items.length >= 1" >
+      <div class="flex flex-column mx-8 conatiner-price"   *ngIf=" items$ || items$.length >= 1" >
         <div>
           <div>
             <h3>Sipariş Özeti</h3>
