--- a/src/app/pages/components/favorites/favorites.component.html
+++ b/src/app/pages/components/favorites/favorites.component.html
@@ -1,7 +1,7 @@
 <div class="flex">
   <div
     class="block align-items-center w-full h-full justify-content-center bg-white font-bold m-2 px-5 py-3 border-round"
-    *ngIf="!items$ || items$.length === 0"
+    *ngIf="!items || items.length === 0"
   >
     <div class="header-title block w-full m-3">
       <h3>{{ "favoritesMainForm.header" | transloco }}</h3>
@@ -33,7 +33,7 @@
       </div>
     </div>
   </div>
-  <div class="flex w-full" *ngIf="let item of items$">
+  <div class="flex w-full" *ngIf="items">
     <div class="table">
       <p-table>
         <ng-template pTemplate="header">
@@ -47,7 +47,7 @@
             <th>İşlemler</th>
           </tr>
         </ng-template>
-        <ng-template pTemplate="body" let-item >
+        <ng-template pTemplate="body" let-item>
           <tr>
             <td>{{ item.id }}</td>
             <td>
@@ -69,7 +69,7 @@
             <td class="button-style">
               <button
                 class="button w-full border-round"
-                (click)="removeFromCartFavorites(item)"
+                (click)="removeFromCartFavorites(item.id)"
               >
                 Sil
               </button>
