--- a/src/app/pages/components/navbar-list/navbar-list.component.scss
+++ b/src/app/pages/components/navbar-list/navbar-list.component.scss
@@ -15,7 +15,7 @@
   text-decoration: none;
   color: #000;
   font-size: 18px;
-  margin: 10px;
+  margin: 5px;
 }
 
 .custom-select{
@@ -24,5 +24,7 @@
   background: transparent;
 }
 
+.menu-item i{
 
-
+  margin-right: 5px;
+}
