--- a/src/app/pages/components/orders/orders.component.html
+++ b/src/app/pages/components/orders/orders.component.html
@@ -2,7 +2,7 @@
   <div class="flex flex-wrap gap-3">
     <div
     class="block align-items-center w-full h-full justify-content-center bg-white font-bold m-2 px-5 py-3 border-round"
-    *ngIf="items"
+    *ngIf="!items || items.length === 0"
   >
     <div class="header-title block w-full m-3">
       <h3>{{ "favoritesMainForm.header" | transloco }}</h3>
@@ -34,8 +34,8 @@
       </div>
     </div>
   </div>
-    <div class="flex w-full">
-      <div class="table">
+    <div class="flex w-full" *ngIf="items || items?.length >= 1">
+      <div class="table" >
         <p-table [value]="items">
           <ng-template pTemplate="header">
             <tr>
@@ -49,7 +49,7 @@
               <th>İşlemler</th>
             </tr>
           </ng-template>
-          <ng-template pTemplate="body" let-item *ngFor="let item of items">
+          <ng-template pTemplate="body" let-item >
             <tr>
               <td>{{ item.id }}</td>
               <td>
@@ -73,7 +73,7 @@
           </ng-template>
         </p-table>
       </div>
-      <div class="flex flex-column mx-8 container-price">
+      <div class="flex flex-column mx-8 container-price" *ngIf="items || items?.length >= 1">
         <div>
           <div>
             <h3>Sipariş Özeti</h3>
