--- a/src/app/dashboard/components/user-management/user-management.component.scss
+++ b/src/app/dashboard/components/user-management/user-management.component.scss
@@ -1,9 +1,15 @@
 .conatiner {
+  width: 100%;
+}
+
+.card{
   justify-content: center;
-  width: 80%;
+  width: 90%;
   float: right;
-  margin: 20px;
+  overflow: auto; /* Yatay kaydırmayı etkinleştir */
+  white-space: nowrap;
   border: 2px solid rgba(255, 255, 255, 0.5);
   border-color: #000;
+  margin-right: 20px;
   margin-bottom: 20px;
 }
