--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,6 +7,7 @@
 /* You can add global styles to this file, and also import other style files */
 *{
   font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  box-sizing: border-box;
 }
 .p-float-label{
   background-color: #000;
