--- a/src/app/dashboard/components/product-management/addproduct-form/addproduct-form.component.html
+++ b/src/app/dashboard/components/product-management/addproduct-form/addproduct-form.component.html
@@ -142,7 +142,7 @@
     <!-- rating  input end-->
     <!-- button start-->
     <span class="button-style mt-4">
-      <button class="button w-12rem"  (click)="onSubmit()">ekle</button>
+      <button class="button w-12rem"  >ekle</button>
     </span>
     <!-- button end-->
   </form>
