--- a/src/app/pages/components/footer/footer.component.html
+++ b/src/app/pages/components/footer/footer.component.html
@@ -1,10 +1,42 @@
-
 <footer class="footer">
   <div class="container">
-    <div class="row">
-      <div class="col-12 text-center">
-        &copy; 2023 Your Company. All rights reserved.
-      </div>
-    </div>
+   <div class="row">
+     <div class="footer-col">
+       <h4>company</h4>
+       <ul>
+         <li><a href="#">about us</a></li>
+         <li><a href="#">our services</a></li>
+         <li><a href="#">privacy policy</a></li>
+         <li><a href="#">affiliate program</a></li>
+       </ul>
+     </div>
+     <div class="footer-col">
+       <h4>get help</h4>
+       <ul>
+         <li><a href="#">FAQ</a></li>
+         <li><a href="#">shipping</a></li>
+         <li><a href="#">returns</a></li>
+         <li><a href="#">order status</a></li>
+         <li><a href="#">payment options</a></li>
+       </ul>
+     </div>
+     <div class="footer-col">
+       <h4>About us</h4>
+       <ul>
+         <li><a href="#">+901234567890</a></li>
+         <li><a href="#">İstanbul</a></li>
+         <li><a href="#">info@gmail.com</a></li>
+       </ul>
+     </div>
+     <div class="footer-col">
+       <h4>follow us</h4>
+       <div class="social-links">
+         <a href="#"><i class="pi pi-facebook"></i></a>
+         <a href="#"><i class="pi pi-twitter"></i></a>
+         <a href="#"><i class="pi pi-instagram"></i></a>
+         <a href="#"><i class="pi pi-linkedin"></i></a>
+       </div>
+     </div>
+   </div>
   </div>
 </footer>
