--- a/src/app/pages/components/favorites/favorites.component.html
+++ b/src/app/pages/components/favorites/favorites.component.html
@@ -8,13 +8,13 @@
     </div>
     <div class="block m-3 justify-content-center">
       <div class="card flex justify-content-center">
-        <p-image
+        <!-- <p-image
           class="img"
           src="https://cdn.icon-icons.com/icons2/1458/PNG/512/heartbutton_99629.png"
           alt="Image"
           width="300"
           height="100%"
-        ></p-image>
+        ></p-image> -->
       </div>
       <div class="card flex justify-content-center">
         <h3>{{ "favoritesForm.title" | transloco }}</h3>
