add new css code

--- a/src/app/pages/components/orders/orders.component.scss
+++ b/src/app/pages/components/orders/orders.component.scss
@@ -1,13 +1,8 @@
-.page-layout {
-  display: flex;
-  justify-content: space-between;
-}
-
-
 
 .content {
-  width: 80%; /* İçerik alanının genişliği, ihtiyaca göre ayarlayın */
-  padding: 1rem;
+  width:auto; /* İçerik alanının genişliği, ihtiyaca göre ayarlayın */
+
 }
+
 
 /* Ekstra stillendirme seçenekleri için kullanılabilir */
