--- a/src/app/pages/components/orders/default-content/default-content.component.html
+++ b/src/app/pages/components/orders/default-content/default-content.component.html
@@ -6,7 +6,7 @@
     <div class="card flex justify-content-center">
       <p-image
         class="img"
-        src="https://cdn.icon-icons.com/icons2/1458/PNG/512/heartbutton_99629.png"
+        src="assets/images/cart-icon-transparent.png"
         alt="Image"
         width="300"
         height="100%"
@@ -21,9 +21,9 @@
         {{ "ordersForm.desc2" | transloco }}
       </h6>
     </div>
-    <div class="card justify-content-center align-content-center">
-      <span class="button-style">
-        <button class="button w-full" routerLink="/product">
+    <div class="card justify-content-center align-content-center w-full">
+      <span class="button-style flex">
+        <button class="button " routerLink="/product">
           {{ "ordersForm.buttonLabel" | transloco }}
         </button>
       </span>
