--- a/src/app/pages/pages.component.scss
+++ b/src/app/pages/pages.component.scss
@@ -2,10 +2,13 @@
   display: flex;
   flex-direction: column;
   min-height: 100vh;
+  margin: 0;
+  padding: 0;
 }
 
 .app-content {
   flex: 1; /* İçerik alanını doldurmak için esneklik ekleyin */
+
 }
 
 .app-footer {
