--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,7 +9,6 @@
   font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   box-sizing: border-box;
 
-
 }
 .p-float-label{
   background-color: #000;
@@ -19,6 +18,8 @@
   margin-left:25px ;
 }
 body{
+  margin: 0;
+  padding: 0;
   width: 100%;
   min-height: 100vh;
   background-image: url('assets/images/net-rd-2-1.jpg');
@@ -38,59 +39,25 @@ input{
 p-password-info{
   width: 100%;
 }
-
-// .button-style{
-//   margin-top: 25px;
-//   display: block;
-// }
-// .button-style .button{
-//   color:white;
-//   background: #000;
-//   width: 100px;
-//   height: 50px;
-//   font-size: 16px;
-//   border: solid 1px gainsboro;
-//   border-radius: 10px;
-//   cursor: pointer;
-// }
-// .button-style .button:hover{
-//   color:#fff;
-//   background: #176B87;
-
-// }
-
-
-// Define basic colors
-$light-blue: #4dabf5;
-$white: #ffffff;
-$light-gray: #f5f5f5;
-$medium-gray: #b2b2b2;
-$dark-gray: #555555;
-$black: #000000;
-
-// Define button style
-.button-style {
-  button {
-    background-color: $light-blue;
-    color: $white;
-    border: none;
-    padding: 10px 20px;
-    cursor: pointer;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 18px;
-    margin: 4px 2px;
-    transition-duration: 0.4s;
-    border-radius: 5px;
-    width: 100%;
-    height: auto;
-  }
-
-  button:hover {
-    background-color: $dark-gray;
-    color: $white;
-  }
+.button-style button {
+  background-color: #4dabf5;
+  color: #fff;
+  border: none;
+  padding: 10px 15px; /* Yatay iç boşlukları ayarlayın */
+  cursor: pointer;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 18px;
+  margin: 4px 2px;
+  transition-duration: 0.4s;
+  border-radius: 5px;
+  width: 100%; /* Genişliği otomatik boyuta ayarlayın */
+  height: auto;
+}
+.button-style button:hover {
+  background-color: #555;
+  color: #fff;
 }
 
 .p-float-label i{
